kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe
  namespace: production
  labels:
    app: tic-tac-toe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tic-tac-toe
          image: ghcr.io/garbaa/devsecops-demo:sha-01b5cbe06bfd420e5fe631dd32aee84e2bba696d
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["NET_RAW", "ALL"]
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
